--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -195,6 +195,13 @@ p
   margin: 0 0 1.8em 0
   line-height: 22px
 
+p.emphatic
+  margin: 2em 0 1.8em 0
+  line-height: 22px
+  font-weight: 900
+  font-style: italic;
+  text-align:center;
+
 a
   color: #0089f3
   text-decoration: none
