--- a/src/index.jade
+++ b/src/index.jade
@@ -56,7 +56,7 @@ html
             |Setup next slide.. do whatever you need to do to stay awake    
 
   
-      section.giffy(style="background-image: url(images/glue.gif)")
+      //section.giffy(style="background-image: url(images/glue.gif)")
 
       section.giffy(style="background-image: url(images/manifesto.png)")
         aside
@@ -74,14 +74,16 @@ html
           li Decentralized Participation
           li
             strong And my two cents...
-          li cost of participation low
-          li fragmentation not an issue
-          li write once run (mostly anywhere)
-          li no Gatekeepers    
+          li Cost of Participation Very Low
+          li Fragmentation is not an issue
+          li Write once run (mostly anywhere)
+          li No Gatekeepers    
           li Runs on Non Proprietary Standards!
         aside
           pre
-            |This really describes the web that we have today. Talk about creating a website.
+            |This really describes the web that we have today. 
+            <br>
+            |Talk about creating a website.
             <br>
             |This does not describe mobile - explain why.               
 
@@ -102,36 +104,38 @@ html
             |Everyone knows this guy right?
             <br>
             |At the very beginning we start to see an approach or philosophy of openess that 
-            |would later became an inegral part
-            |of the web.
+            |would later became an inegral part of the web.
             <br>
             | Note way before this open standards had been succesfull note tcp/ip from 1979
             <br>
-            | Layering of open standards on existing open standards.          
+            | Layering of open standards on existing open standards. 
+            <br>
+            | IMPORTANT - this is the philosophy of openess that embodied the development of the web 
+            | from the very beginning, and as mozilla grows we should be concious {something in here to work on}         
 
 
       section
         h2.bullet After That Things Moved Quickly
         ul
           li 
-            strong 1993 
+            strong <br>1993<br>
             ul
               li CERN agrees to allow anyone to use Web protocol and code royalty-free.
               li NCSA release first alpha version of Marc Andreessen's "Mosaic for X"
               li WWW (Port 80 HTTP) traffic measures 0.1% of NSF backbone traffic. 
           li 
-            strong 1994
+            strong <br>1994<br>
             ul
               li Marc Andreessen and colleagues leave NCSA to form "Mosaic Communications Corp" (later Netscape).
               li World Wide Web Consortium founded. 
           li
-            strong 1997
+            strong <br>1997<br>
             ul
               li W3C publishes first W3C Recommendation for HTML — HTML 3.2.
               li IE 4 Released (Bundled With Windows)
               li Browser Wars
           li 
-            strong 1998
+            strong <br>1998<br>
             ul
               li Web Standards Project - Established to push agenda of standards
 
@@ -148,13 +152,15 @@ html
           li Standards Making Is Slow Process...
         aside
           pre
-            |What is a standard. For us standar            
+            |What is a standrd. In this context standards refer to how browsers should render HTML, CSS
+            |when you say width="100px" the standard 'recommends' exactly what this should do (More on this on a moment).            
             <br>
-            |W3C {EXPLAIN STANDARDS HERE AND SCOPE}
-            |Note w3c does not publish strict standards but rather strong recommendations.
-            |IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
-            |at IE and dominating the market. Even though we had an establised method for evolving standards
-            |ms went there own way.
+            |Note w3c does not publish strict standards but rather strong recommendations. This is true for HTML & CSS and differs
+            |from ECMA. Standards for programming languages are much stricter and should be thought of as rules not recommendation.
+            <br>
+            |A js interpreter is expected to adhere to the ECMA standard, browsers area a little looser. They often integrate
+            |features before they are 'published' by the W3C.
+
 
       section
         h2.bullets How Do Things Become Standards?
@@ -179,9 +185,19 @@ html
           h2 Let's Talk About Microsoft In The Late 90's and Early 2000's 
           aside
             pre
-              |Microsoft dominated the browser market and used their dominance to implment Proprietary
-              |features. Developers would spend the majority of their time on the browser with
-              |the most eyeballs. Solidifying their market share.
+            <br>
+            |In the late nineties IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
+            |at IE, integrating the browser into their OS and dominating the market.
+            <br>
+            |It was during this time that MS Even though we had an establised method for evolving standards
+            |ms went there own way.
+            <br>
+            |For developers this was awful. You needed to spend most of your time developing for the browser with the
+            |largest audience. Remember those "Best Viewed in IE badges.
+            <br>
+            |Developing solely for IEs Proprietary standards broke most of the bullets we previously mentioned
+            |and would bake in problems later. Even today there are many applications that only work in IE6 because
+            |that specific version had a Proprietary feature that was coded too.
 
           
       section.giffy-fit(style="background-image: url(images/ie.gif)")
@@ -202,23 +218,26 @@ html
           |"Microsoft is committed to implementing the Internet standards that make sense to allow our customers to build great solutions. As standards emerge, we evaluate them to see which standards might best serve our customers' needs."
 
         aside
-          |Someone forgot what the word standard means
-          <br>
-          |Developing cross-browser websites was incredibly painful.
-          |The promise of write once run everywhere failed. You had to code for ie and everybody else
-          |Who knows if the features you coded against would exist in the future?
-          |Supporting multiple versions of IE became even more of a pain.
-          |Not just IE vs Netscape but IE6 vs IE7 vs IE8 vs Nestscape 
+          pre
+            |Someone forgot what the word standard means
+            <br>
+            |Developing cross-browser websites was incredibly painful.
+            |The promise of write once run everywhere failed. You had to code for ie and everybody else
+            |Who knows if the features you coded against would exist in the future?
+            |Supporting multiple versions of IE became even more of a pain.
+            |Not just IE vs Netscape but IE6 vs IE7 vs IE8 vs Nestscape 
 
       section.giffy-fit(style="background-image: url(images/ben-vogue.jpg)")
         aside
           pre
-            |{something here about me}
+            |Another case study me. Here I am at my first job out of college happily coding
+            |standards compliant HTML & CSS.
 
       section.giffy-fit(style="background-image: url(images/ben-tired-1.jpg)")    
         aside
           pre
-            |{somethign here about me}         
+            |And here I am after a few months making fixes for multiple version of IE on the Process
+            |& mac. And we didnt even have mobile yet.        
 
       section
         h2.bullets To Be Fair... Microsoft Were Not Total Jerks
@@ -248,7 +267,8 @@ html
         h2.bullets Life Is Good On The Dekstop
         ul
           li Developers happy
-          li Competition & Innovation HTML5
+          li Competition & Innovation 
+          li HTML5 Booyah!
           li and then this happens....
 
 
@@ -262,15 +282,15 @@ html
         h2.bullets iOS & Android Changed Everything
         ul
           li Mobile Usage Skyrocketed
-          li You Interact Over The Internet Via Apps
+          li You Interact Through Apps Not A Browser
           li 
             strong OH SHIT... remember the manifesto?
           li Interoperability - Nope.
           li Decentralized Participation - Nope.
-          li Cost of participation low - Nope.
-          li Fragmentation not an issue - Nope.
-          li write once run (mostly anywhere) - Nope.
-          li no Gatekeepers - Hells Nope.
+          li Cost of Participation low - Nope.
+          li Fragmentation Not an Issue - Nope.
+          li Write Once Run Anywhere - Nope.
+          li No Gatekeepers - Hells Nope.
           li Runs on Non Proprietary Standards! - Nope.
 
 
@@ -278,10 +298,12 @@ html
 
       section
         h2.bullets What If The Same Strategy on Desktop Was Applied To Mobile
-          ul
-            li HTML / CSS / JS For Apps
-            li APIs allowing the above to interact with a phone (gps battery etc)
-            li yes! yes! yes!      
+        p
+          |HTML / CSS / JS For Apps
+        p
+          |APIs allowing the above to interact with a phone (gps battery etc)
+        p
+          |yes! yes! yes!      
 
       section.giffy(style="background-image: url(images/Firefox-OS-with-Fox.jpg)")    
         h2.bullets Firefox OS!
@@ -290,37 +312,13 @@ html
 
         aside Break out about developing in the open etc. This may be really important
 
-
-
-
-
-      //- section 
-      //-   h2.bullets A Lot Changes Quickly 2004 - 2010
-      //-   ul
-      //-     li Microsoft offers little
-      //-     li Firefox innovates and gains market share
-      //-     li Microsoft under pressure from consumers and industry changes course.
-      //-     li Chrome Appears with webkit
-
-
-      //-   ul
-      //-     li You should know our history.
-      //-     li Important points! Commits to following W3C standards
-      //-     li Browser War #2
-      //-     li Everyone hates microsoft.
-      //-     li Firefox has tabs
-      //-     li MS had dominant markets share - does nothing from 2001 (IE6) - 2006 (IE7)
-
-
-
-
-
-
-            
-
-
-
-
+      section
+        h2.bullet End Slide
+        hr
+        ul
+          li
+            strong Enjoy! :)
+            a(href='http://twitter.com/bensternthal')  -@bensternthal
 
 
       //- section
@@ -347,21 +345,6 @@ html
 
       //- section
       //-   h2 After 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
