Added Sad Firefox Updated Additional Slides

--- a/src/index.jade
+++ b/src/index.jade
@@ -68,11 +68,14 @@ html
             | 
 
       section
-        h2.bullets The Web Is A Public Resource
+        h2.bullets The Web Is A Public Resource: <br> Built On Open Standards
+        strong Which Gives Us
         ul
           li Interoperability
           li Decentralized Participation
           li
+            hr
+          li 
             strong And my two cents...
           li Cost of Participation Very Low
           li Fragmentation is not an issue
@@ -141,10 +144,12 @@ html
 
  
       section
-        h2.bullets What is A Standard?  
+        h2.bullets What is A "Web" Standard?  
         ul
           li A Mix Of Standards (JS) & Recommendations (HTML/CSS)
           li Not All Standards Are Equal
+          li
+            hr
           li 
             strong Standard Bodies
           li W3C, IETF, ISO, ECMA, Unicode Consortium, IANA
@@ -185,19 +190,19 @@ html
           h2 Let's Talk About Microsoft In The Late 90's and Early 2000's 
           aside
             pre
-            <br>
-            |In the late nineties IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
-            |at IE, integrating the browser into their OS and dominating the market.
-            <br>
-            |It was during this time that MS Even though we had an establised method for evolving standards
-            |ms went there own way.
-            <br>
-            |For developers this was awful. You needed to spend most of your time developing for the browser with the
-            |largest audience. Remember those "Best Viewed in IE badges.
-            <br>
-            |Developing solely for IEs Proprietary standards broke most of the bullets we previously mentioned
-            |and would bake in problems later. Even today there are many applications that only work in IE6 because
-            |that specific version had a Proprietary feature that was coded too.
+              <br>
+              |In the late nineties IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
+              |at IE, integrating the browser into their OS and dominating the market.
+              <br>
+              |It was during this time that MS Even though we had an establised method for evolving standards
+              |ms went there own way.
+              <br>
+              |For developers this was awful. You needed to spend most of your time developing for the browser with the
+              |largest audience. Remember those "Best Viewed in IE badges.
+              <br>
+              |Developing solely for IEs Proprietary standards broke most of the bullets we previously mentioned
+              |and would bake in problems later. Even today there are many applications that only work in IE6 because
+              |that specific version had a Proprietary feature that was coded too.
 
           
       section.giffy-fit(style="background-image: url(images/ie.gif)")
@@ -207,10 +212,11 @@ html
         <br>
         img(src='images/border-box-model.png') 
         aside
-          |IE bundles a ton of Proprietary features, ignores W3c recommendations. 
-          <br>
-          |imagine coding for ie, you have to now code once for ie and again for other browsers following
-          |w3c recs. what happens when there are even more browsers on the market.. or mobile?
+          pre
+            |IE bundles a ton of Proprietary features, ignores W3c recommendations. 
+            <br>
+            |imagine coding for ie, you have to now code once for ie and again for other browsers following
+            |w3c recs. what happens when there are even more browsers on the market.. or mobile?
 
       section.giffy(style="background-image: url(images/yogscast.gif)")
         h2 Creates A Nightmare For Developers
@@ -248,8 +254,11 @@ html
           li ^ responsible for Ajax, Web 2.0 .. why we have nice things.
 
         aside
-          |When microsoft innovated - they did it in a way outside of the standards process. And used
-          |innovation to develop market share not to push the web forward. Remember designed for IE
+          pre
+            |When microsoft innovated - they did it in a way outside of the standards process. And did so privately.
+            |They used innovation to develop market share not to push the web forward. Remember designed for IE.
+            |However some of their Proprietary standards eventually were adopted XMLHttpRequest for example.
+
 
       section.giffy(style="background-image: url(images/youre_awesome_carl_sagan.gif)")
 
@@ -277,6 +286,8 @@ html
 
       section.giffy-fit(style="background-image: url(images/its_classified_barack_obama.gif)")    
 
+      section.giffy(style="background-image: url(images/sad-firefox.jpg)")  
+        h2 Why U Hate Freedom?
 
       section
         h2.bullets iOS & Android Changed Everything
@@ -302,6 +313,8 @@ html
           |HTML / CSS / JS For Apps
         p
           |APIs allowing the above to interact with a phone (gps battery etc)
+        P
+          |Standards developed and discussed in the open (We heartTim Berners Lee)
         p
           |yes! yes! yes!      
 
@@ -309,6 +322,9 @@ html
         h2.bullets Firefox OS!
         ul
           li Applying the Lessons Learned On Desktop To Mobile
+          li Making sure mobile is interoperable and remains a public resource.
+          li Remember the manifesto
+          li Open Web Standards are critical to success.
 
         aside Break out about developing in the open etc. This may be really important
 
