Added start of closing slide

--- a/src/index.jade
+++ b/src/index.jade
@@ -329,10 +329,14 @@ html
         aside Break out about developing in the open etc. This may be really important
 
       section
-        h2.bullet End Slide
+        h2.bullet {some non crappy title}
         hr
         ul
-          li
+          li Work In The Open
+          li Support Collaboration & Be Inclusive
+          li Campaigns Should Reflect The Values Put Forth In The Manifesto And Support Those Goals
+          li 'Mad Men' Marketing (something in here is good)
+          li Remember: We Work In The Public Interest
             strong Enjoy! :)
             a(href='http://twitter.com/bensternthal')  -@bensternthal
 
