--- a/src/index.jade
+++ b/src/index.jade
@@ -73,7 +73,8 @@ html
         ul
           li Interoperability
           li Decentralized Participation
-          li
+          li Non-proprietarty. No one owns it (although there are bullies)
+          li Higher Chance Of Future Support
             hr
           li 
             strong And my two cents...
@@ -332,10 +333,10 @@ html
         h2.bullet {some non crappy title}
         hr
         ul
-          li Work In The Open
+          li Work In The Open .. For real.. everytime we use basecamp or keep a doc private my cat cries.
           li Support Collaboration & Be Inclusive
-          li Campaigns Should Reflect The Values Put Forth In The Manifesto And Support Those Goals
-          li 'Mad Men' Marketing (something in here is good)
+          li Campaigns Can Market Products And Reflect The Values Put Forth In The Manifesto
+          li 'Mad Men' Marketing {eh maybe not mention this}
           li Remember: We Work In The Public Interest
             strong Enjoy! :)
             a(href='http://twitter.com/bensternthal')  -@bensternthal
