--- a/src/index.jade
+++ b/src/index.jade
@@ -234,13 +234,13 @@ html
             |Supporting multiple versions of IE became even more of a pain.
             |Not just IE vs Netscape but IE6 vs IE7 vs IE8 vs Nestscape 
 
-      section.giffy-fit(style="background-image: url(images/ben-vogue.jpg)")
+      section.giffy-fit(style="background-image: url(images/ben-vogue.jpg); background-color:#000000;")
         aside
           pre
             |Another case study me. Here I am at my first job out of college happily coding
             |standards compliant HTML & CSS.
 
-      section.giffy-fit(style="background-image: url(images/ben-tired-1.jpg)")    
+      section.giffy-fit(style="background-image: url(images/ben-tired-1.jpg); background-color:#000000;")    
         aside
           pre
             |And here I am after a few months making fixes for multiple version of IE on the Process
@@ -261,7 +261,7 @@ html
             |However some of their Proprietary standards eventually were adopted XMLHttpRequest for example.
 
 
-      section.giffy(style="background-image: url(images/youre_awesome_carl_sagan.gif)")
+      section.giffy(style="background-image: url(images/youre_awesome_carl_sagan.gif); background-color:#000000;")
 
       section 
         h2.bullets .... Back To Standards
@@ -285,7 +285,7 @@ html
       section.giffy(style="background-image: url(images/AFP_Getty-60669433.jpg)")    
         h2 Can I Install Firefox On This Thing?
 
-      section.giffy-fit(style="background-image: url(images/its_classified_barack_obama.gif)")    
+      section.giffy-fit(style="background-image: url(images/its_classified_barack_obama.gif); background-color:#000000;")    
 
       section.giffy(style="background-image: url(images/sad-firefox.jpg)")  
         h2 Why U Hate Freedom?
@@ -306,7 +306,7 @@ html
           li Runs on Non Proprietary Standards! - Nope.
 
 
-      section.giffy-fit(style="background-image: url(images/nope.gif)")  
+      section.giffy-fit(style="background-image: url(images/nope.gif); background-color:#000000;")  
 
       section
         h2.bullets What If The Same Strategy on Desktop Was Applied To Mobile
@@ -330,80 +330,9 @@ html
         aside Break out about developing in the open etc. This may be really important
 
       section
-        h2.bullet {some non crappy title}
+        h2.bullet {closing slide}
         hr
-        ul
-          li Work In The Open .. For real.. everytime we use basecamp or keep a doc private my cat cries.
-          li Support Collaboration & Be Inclusive
-          li Campaigns Can Market Products And Reflect The Values Put Forth In The Manifesto
-          li 'Mad Men' Marketing {eh maybe not mention this}
-          li Remember: We Work In The Public Interest
-            strong Enjoy! :)
-            a(href='http://twitter.com/bensternthal')  -@bensternthal
-
-
-      //- section
-      //-   h2 Manifesto stuff
-      //-   p . The Manifesto sets out a vision of the Internet as a piece of infrastructure that is open, a
-      //-     !ccessible and enriches the lives of individual human beings. I
-      //-   p https://blog.lizardwrangler.com/2007/02/13/introducing-the-mozilla-manifesto/
-      //-   p This came about in 2007
-      //-   p what happened that lead us here
-
-      //- section
-      //-   h2 Why Are Open Standards Critical For The Open Web
-      //-     p Its the only non-proprietarty platform. No one owns it.
-      //-     p Write once run over.
-      //-     p standards == higher change it will run in the future.
-      //-     p fragmentation is not an issue
-
-      //- section
-      //-   h2 Something About The Late 90s 
-      //-     p IE4 & Netscape
-      //-     p Best viewed in
-      //-     p Proprietary feateures = build a version for each browser
-      //-     p 
-
-      //- section
-      //-   h2 After 
-
-
-
-      //- section
-      //-   h2 Syntax Highlighting
-      //-   h3 Powered by <a href="http://twitter.com/LeaVerou">Lea Verou</a>'s <a href="https://github.com/LeaVerou/prism">Prism</a>
-      //-   hr
-      //-   pre
-      //-     code.language-javascript.
-      //-       bespoke.from('article', {
-      //-         keys: true,
-      //-         touch: true,
-      //-         hash: true,
-      //-         state: true,
-      //-         bullets: 'li, .bullet'
-      //-       });
-
-      //- section(data-bespoke-hash='named-route')
-      //-   h2 Named Route
-      //-   h3 Powered by <a href="https://github.com/markdalgleish/bespoke-hash">bespoke-hash</a>
-      //-   p Look up! This route has been named with a <em>'data-bespoke-hash'</em> attribute.
-
-      //- section(data-bespoke-state='emphatic')
-      //-   h2 Emphatic Slide!
-      //-   h3 Powered by <a href="https://github.com/markdalgleish/bespoke-state">bespoke-state</a>
-
-      //- section
-      //-   h2.bullet Just the beginning...
-      //-   hr
-      //-   ul
-      //-     li Edit <a href="http://jade-lang.com/">Jade</a> markup in <em>'src/index.jade'</em>
-      //-     li Edit <a href="http://learnboost.github.io/stylus/">Stylus</a> styles in <em>'src/styles/main.styl'</em>
-      //-     li Edit JavaScript in <em>'src/scripts/main.js'</em>
-      //-   hr
-      //-   ul
-      //-     li
-      //-       strong Enjoy! :)
-      //-       a(href='http://twitter.com/markdalgleish')  -@markdalgleish
+        h3 This can either be a transition slide or a end on high note slide.
 
     // build:js scripts/scripts.js
     script(src='bower_components/bespoke.js/dist/bespoke.min.js')
