--- a/src/index.jade
+++ b/src/index.jade
@@ -12,7 +12,7 @@ html
     link(rel='stylesheet', type='text/css', href='styles/main.css')
     // endbuild
 
-  body
+  body   
 
     article
       //.giffy(style="background-image: url(/images/yogscast.gif)")
@@ -20,76 +20,64 @@ html
         h1 Open Web Technologies:<br> A History & Introduction
 
       section
-        h2 An Open Skill Session For Engagement
-        h3 Presented By:
-          hr
-          p
-            img(src='images/bensternthal.jpg', height='100') 
-            <br>
-            |Benjamin Sternthal @bensternthal - History
-          p
-            img(src='images/Craig-Cook.jpg', height='100') 
-            <br>            
-            |Craig Cook @craigcook - {Insert Summary}
-          p
-            {10 Minute Break}
-          p
-            img(src='images/billwalker.jpg', height='100') 
-            <br>              
-            |Bill Walker @wfwalker - {Insert Summary}
+        h2 Presented By:
+        hr
+        p
+          img(src='images/bensternthal.jpg', height='100') 
+          <br>
+          |<strong>Benjamin Sternthal @bensternthal</strong> - Past (10 Minutes)
+        p
+          img(src='images/Craig-Cook.jpg', height='100') 
+          <br>            
+          |<strong>Craig Cook @craigcook</strong> - Present (30 minutes)
+        p
+          |{10 Minute Break}
+        p
+          img(src='images/billwalker.jpg', height='100') 
+          <br>              
+          |<strong>Bill Walker @wfwalker</strong> - Future (30 Minutes)
         aside
-          pre
-            |People Introductions What They Do<br>
+          |The goal of this talk
+          <br><br>
+          |what web standards are, 
+          <br><br>how they came about, 
+          <br><br>why they are critical 
+          |for mozilla and out mission
+          <br> 
 
-            |I will be talking about history<br>
-
-            |Craig Cook is a senior front end engineer on the Brand team and will be talking
-            |about {} <br>
-
-            |Bill Walker is a senior manager apps engineering and will talk about open standards and
-            |firefox os.<br>
-            
-            |We hope you leave this talk with a better understanding of...
-            |why web standards are so important, how ideas become standards, and the role of standards
-            |in our projects.<br>
-
-            |Setup next slide.. do whatever you need to do to stay awake    
-
-  
-      //section.giffy(style="background-image: url(images/glue.gif)")
+          |I will be talking about history
+          <br>
+          |Craig Cook is a senior front end engineer on the Brand team and will be talking
+          |about the present 
+          <br>
+          |Bill Walker is a senior manager apps engineering and will talk about open standards and
+          |firefox os.
+          <br>
 
       section.giffy(style="background-image: url(images/manifesto.png)")
-        aside
-          pre
-            |Before we jump in, I want to take a moment to talk about how important web standards are.
-            <br>
-            |They are so important that they were added as a specific item #6 what you see here to the manifesto.
-            <br>
-            | 
 
       section
-        h2.bullets The Web Is A Public Resource: <br> Built On Open Standards
-        strong Which Gives Us
+        h2.bullets What is A "Web" Standard?  
         ul
-          li Interoperability
-          li Decentralized Participation
-          li Non-proprietarty. No one owns it (although there are bullies)
-          li Higher Chance Of Future Support
+          li A Mix Of Standards (JS) & Recommendations (HTML/CSS)
+          li Not All Standards Are Equal
+          li
             hr
           li 
-            strong And my two cents...
-          li Cost of Participation Very Low
-          li Fragmentation is not an issue
-          li Write once run (mostly anywhere)
-          li No Gatekeepers    
-          li Runs on Non Proprietary Standards!
+            strong Standard Bodies
+          li W3C, IETF, ISO, ECMA, Unicode Consortium, IANA
+          li Tries To Get Vendors To Agree
+          li Standards Making Is Slow Process...
         aside
-          pre
-            |This really describes the web that we have today. 
-            <br>
-            |Talk about creating a website.
-            <br>
-            |This does not describe mobile - explain why.               
+          |What is a standrd. In this context standards refer to how browsers should render HTML, CSS
+          |when you say width="100px" the standard 'recommends' exactly what this should do (More on this on a moment).            
+          <br><br>
+          |Note w3c does not publish strict standards but rather strong recommendations. This is true for HTML & CSS and differs
+          |from ECMA. Standards for programming languages are much stricter and should be thought of as rules not recommendation.
+          <br><br>
+          |Standards can be in different states candidate and recommendation
+
+      //section.giffy(style="background-image: url(images/glue.gif)")          
 
       section
         h2 Let's Start At The Beginning
@@ -104,69 +92,43 @@ html
           |available, as part of a truly world-wide web. 
 
         aside
-          pre
-            |Everyone knows this guy right?
-            <br>
-            |At the very beginning we start to see an approach or philosophy of openess that 
-            |would later became an inegral part of the web.
-            <br>
-            | Note way before this open standards had been succesfull note tcp/ip from 1979
-            <br>
-            | Layering of open standards on existing open standards. 
-            <br>
-            | IMPORTANT - this is the philosophy of openess that embodied the development of the web 
-            | from the very beginning, and as mozilla grows we should be concious {something in here to work on}         
+          |Everyone knows this guy right?
+          <br>
+          |At the very beginning we start to see an approach or philosophy of openess that 
+          |would later became an inegral part of the web.
+          <br><br>
+          | Note way before this open standards had been succesfull note tcp/ip from 1979
+          <br><br>
+          | Applying the same logic of the standards that connect your computer.
+          <br>
+          | IMPORTANT - this is the philosophy of openess that embodied the development of the web 
+          | from the very beginning, and as mozilla grows we should be concious {something in here to work on}         
 
 
       section
         h2.bullet After That Things Moved Quickly
         ul
           li 
-            strong <br>1993<br>
+            strong 1993<br>
             ul
               li CERN agrees to allow anyone to use Web protocol and code royalty-free.
               li NCSA release first alpha version of Marc Andreessen's "Mosaic for X"
               li WWW (Port 80 HTTP) traffic measures 0.1% of NSF backbone traffic. 
           li 
-            strong <br>1994<br>
+            strong 1994<br>
             ul
               li Marc Andreessen and colleagues leave NCSA to form "Mosaic Communications Corp" (later Netscape).
               li World Wide Web Consortium founded. 
           li
-            strong <br>1997<br>
+            strong 1997<br>
             ul
-              li W3C publishes first W3C Recommendation for HTML — HTML 3.2.
+              li W3C publishes Recommendation for HTML — HTML 3.2.
               li IE 4 Released (Bundled With Windows)
               li Browser Wars
-          li 
-            strong <br>1998<br>
+          li  
+            strong 1998<br>
             ul
-              li Web Standards Project - Established to push agenda of standards
-
- 
-      section
-        h2.bullets What is A "Web" Standard?  
-        ul
-          li A Mix Of Standards (JS) & Recommendations (HTML/CSS)
-          li Not All Standards Are Equal
-          li
-            hr
-          li 
-            strong Standard Bodies
-          li W3C, IETF, ISO, ECMA, Unicode Consortium, IANA
-          li Tries To Get Vendors To Agree
-          li Standards Making Is Slow Process...
-        aside
-          pre
-            |What is a standrd. In this context standards refer to how browsers should render HTML, CSS
-            |when you say width="100px" the standard 'recommends' exactly what this should do (More on this on a moment).            
-            <br>
-            |Note w3c does not publish strict standards but rather strong recommendations. This is true for HTML & CSS and differs
-            |from ECMA. Standards for programming languages are much stricter and should be thought of as rules not recommendation.
-            <br>
-            |A js interpreter is expected to adhere to the ECMA standard, browsers area a little looser. They often integrate
-            |features before they are 'published' by the W3C.
-
+              li Web Standards Project - Established to push agenda of standards...
 
       section
         h2.bullets How Do Things Become Standards?
@@ -178,32 +140,53 @@ html
           li Proposed Recommendation
           li W3C Recommendation
           li But They Work - XMLHttpRequest & WebRTC   
-          li Slow! HTML5 'Started' in 2008, Stable Recommendation Expected 2014! 
+          li Slow! HTML5 'Started' in 2008, Stable Recommendation Expected 2014!!!
         aside 
-          pre
-            |So we have a way of formulating the rules. And the advantages to following the rules
-            |are what's described in the manifesto. Interoperability - non Proprietary standards.
-            <br>
-            |But what happens when you do not follow the rules.                  
+          |So we have a way of formulating the rules. And the advantages to following the rules
+          |are what's described in the manifesto. Interoperability - non Proprietary standards.
+          <br>
+          |But what happens when you do not follow the rules.                 
+
+      section
+        h2.bullets The Web Is A Public Resource: <br> Built On Open Standards... WHY?
+        ul
+          li Interoperability
+          li Decentralized Participation
+          li Non-proprietarty. No one owns it (although there are bullies)
+          li Higher Chance Of Future Support
+            hr
+          li 
+            strong And my two cents...
+          li Cost of Participation Low
+          li Fragmentation is not an issue
+          li Write once run (mostly anywhere)
+          li No Gatekeepers    
+        aside
+          |This really describes the web that we have today. 
+          <br>
+          |Talk about creating a website.
+          <br>
+          |This does not describe mobile - explain why.     
+
+               
 
 
       section
           h2 Let's Talk About Microsoft In The Late 90's and Early 2000's 
           aside
-            pre
-              <br>
-              |In the late nineties IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
-              |at IE, integrating the browser into their OS and dominating the market.
-              <br>
-              |It was during this time that MS Even though we had an establised method for evolving standards
-              |ms went there own way.
-              <br>
-              |For developers this was awful. You needed to spend most of your time developing for the browser with the
-              |largest audience. Remember those "Best Viewed in IE badges.
-              <br>
-              |Developing solely for IEs Proprietary standards broke most of the bullets we previously mentioned
-              |and would bake in problems later. Even today there are many applications that only work in IE6 because
-              |that specific version had a Proprietary feature that was coded too.
+            <br>
+            |In the late nineties IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
+            |at IE, integrating the browser into their OS and dominating the market.
+            <br>
+            |It was during this time that MS Even though we had an establised method for evolving standards
+            |ms went there own way.
+            <br>
+            |For developers this was awful. You needed to spend most of your time developing for the browser with the
+            |largest audience. Remember those "Best Viewed in IE badges.
+            <br>
+            |Developing solely for IEs Proprietary standards broke most of the bullets we previously mentioned
+            |and would bake in problems later. Even today there are many applications that only work in IE6 because
+            |that specific version had a Proprietary feature that was coded too.
 
           
       section.giffy-fit(style="background-image: url(images/ie.gif)")
@@ -213,11 +196,10 @@ html
         <br>
         img(src='images/border-box-model.png') 
         aside
-          pre
-            |IE bundles a ton of Proprietary features, ignores W3c recommendations. 
-            <br>
-            |imagine coding for ie, you have to now code once for ie and again for other browsers following
-            |w3c recs. what happens when there are even more browsers on the market.. or mobile?
+          |IE bundles a ton of Proprietary features, ignores W3c recommendations. 
+          <br>
+          |imagine coding for ie, you have to now code once for ie and again for other browsers following
+          |w3c recs. what happens when there are even more browsers on the market.. or mobile?
 
       section.giffy(style="background-image: url(images/yogscast.gif)")
         h2 Creates A Nightmare For Developers
@@ -225,26 +207,23 @@ html
           |"Microsoft is committed to implementing the Internet standards that make sense to allow our customers to build great solutions. As standards emerge, we evaluate them to see which standards might best serve our customers' needs."
 
         aside
-          pre
-            |Someone forgot what the word standard means
-            <br>
-            |Developing cross-browser websites was incredibly painful.
-            |The promise of write once run everywhere failed. You had to code for ie and everybody else
-            |Who knows if the features you coded against would exist in the future?
-            |Supporting multiple versions of IE became even more of a pain.
-            |Not just IE vs Netscape but IE6 vs IE7 vs IE8 vs Nestscape 
+          |Someone forgot what the word standard means
+          <br>
+          |Developing cross-browser websites was incredibly painful.
+          |The promise of write once run everywhere failed. You had to code for ie and everybody else
+          |Who knows if the features you coded against would exist in the future?
+          |Supporting multiple versions of IE became even more of a pain.
+          |Not just IE vs Netscape but IE6 vs IE7 vs IE8 vs Nestscape 
 
       section.giffy-fit(style="background-image: url(images/ben-vogue.jpg); background-color:#000000;")
         aside
-          pre
-            |Another case study me. Here I am at my first job out of college happily coding
-            |standards compliant HTML & CSS.
+          |Another case study me. Here I am at my first job out of college happily coding
+          |standards compliant HTML & CSS.
 
       section.giffy-fit(style="background-image: url(images/ben-tired-1.jpg); background-color:#000000;")    
         aside
-          pre
-            |And here I am after a few months making fixes for multiple version of IE on the Process
-            |& mac. And we didnt even have mobile yet.        
+          |And here I am after a few months making fixes for multiple version of IE on the Process
+          |& mac. And we didnt even have mobile yet.        
 
       section
         h2.bullets To Be Fair... Microsoft Were Not Total Jerks
@@ -252,13 +231,12 @@ html
           li W3C slow... lumbering
           li IE pushed forward Technologies (CSS) and more...
           li XMLHttpRequest was Proprietary but Became an Open Standards
-          li ^ responsible for Ajax, Web 2.0 .. why we have nice things.
+          li ^ responsible for Ajax, Web 2.0 .. why we have nice things...
 
         aside
-          pre
-            |When microsoft innovated - they did it in a way outside of the standards process. And did so privately.
-            |They used innovation to develop market share not to push the web forward. Remember designed for IE.
-            |However some of their Proprietary standards eventually were adopted XMLHttpRequest for example.
+          |When microsoft innovated - they did it in a way outside of the standards process. And did so privately.
+          |They used innovation to develop market share not to push the web forward. Remember designed for IE.
+          |However some of their Proprietary standards eventually were adopted XMLHttpRequest for example.
 
 
       section.giffy(style="background-image: url(images/youre_awesome_carl_sagan.gif); background-color:#000000;")
@@ -271,7 +249,9 @@ html
           li Writing specific code for 4 browsers sucks
           li Standards Complient Browsers Winning (yay firefox)
           li the late 2000's Wide Adoption of Standards Across All Browsers
-          li IE introduces standards Mode in IE8 2009
+          li IE introduces standards Mode in IE8 2009...
+
+      section.giffy(style="background-image: url(images/manifesto.png)")
       
       section
         h2.bullets Life Is Good On The Dekstop
@@ -308,16 +288,6 @@ html
 
       section.giffy-fit(style="background-image: url(images/nope.gif); background-color:#000000;")  
 
-      section
-        h2.bullets What If The Same Strategy on Desktop Was Applied To Mobile
-        p
-          |HTML / CSS / JS For Apps
-        p
-          |APIs allowing the above to interact with a phone (gps battery etc)
-        P
-          |Standards developed and discussed in the open (We heartTim Berners Lee)
-        p
-          |yes! yes! yes!      
 
       section.giffy(style="background-image: url(images/Firefox-OS-with-Fox.jpg)")    
         h2.bullets Firefox OS!
@@ -328,11 +298,6 @@ html
           li Open Web Standards are critical to success.
 
         aside Break out about developing in the open etc. This may be really important
-
-      section
-        h2.bullet {closing slide}
-        hr
-        h3 This can either be a transition slide or a end on high note slide.
 
     // build:js scripts/scripts.js
     script(src='bower_components/bespoke.js/dist/bespoke.min.js')
