--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -172,7 +172,7 @@ h1
 h2
   font-size: 42px
   letter-spacing: -1px
-  margin-bottom: .8em
+  margin-bottom: .5em
   border-bottom: 2px solid #404040
 
 h3
@@ -221,6 +221,7 @@ a
 
 .bespoke-slide aside
     display: none;
+    line-height: 2em;
 
 .quote
   font-weight: 900
