Added final slide

--- a/src/index.jade
+++ b/src/index.jade
@@ -299,6 +299,15 @@ html
 
         aside Break out about developing in the open etc. This may be really important
 
+      section
+        h2 Thanks!
+        p
+          a(href='http://bensternthal.github.io/presentation-open-web-history/') http://bensternthal.github.io/presentation-open-web-history/
+        p
+          a(href='https://github.com/bensternthal/presentation-open-web-history') https://github.com/bensternthal/presentation-open-web-history
+  
+
+
     // build:js scripts/scripts.js
     script(src='bower_components/bespoke.js/dist/bespoke.min.js')
     script(src='bower_components/bespoke-keys/dist/bespoke-keys.min.js')
