--- a/src/index.jade
+++ b/src/index.jade
@@ -65,7 +65,7 @@ html
             hr
           li 
             strong Standard Bodies
-          li W3C, IETF, ISO, ECMA, Unicode Consortium, IANA
+            li <b>W3C</b>, IETF, ISO, <b>Ecma</b>, Unicode Consortium, IANA
           li Tries To Get Vendors To Agree
           li Standards Making Is Slow Process...
         aside
