--- a/src/index.jade
+++ b/src/index.jade
@@ -64,7 +64,7 @@ html
           li
             hr
           li 
-            strong Standard Bodies
+            strong Standard Bodies 
             li <b>W3C</b>, IETF, ISO, <b>Ecma</b>, Unicode Consortium, IANA
           li Tries To Get Vendors To Agree
           li Standards Making Is Slow Process...
@@ -200,6 +200,8 @@ html
           <br>
           |imagine coding for ie, you have to now code once for ie and again for other browsers following
           |w3c recs. what happens when there are even more browsers on the market.. or mobile?
+          <br><br>
+          |was present in ie5, semi fixed in ie6, but again you have to account for all these versions
 
       section.giffy(style="background-image: url(images/yogscast.gif)")
         h2 Creates A Nightmare For Developers
@@ -250,6 +252,9 @@ html
           li Standards Complient Browsers Winning (yay firefox)
           li the late 2000's Wide Adoption of Standards Across All Browsers
           li IE introduces standards Mode in IE8 2009...
+
+        aside
+          |quirks mode for backward compatibility
 
       section.giffy(style="background-image: url(images/manifesto.png)")
       
