--- a/src/index.jade
+++ b/src/index.jade
@@ -91,10 +91,7 @@ html
           li But They Work - XMLHttpRequest & WebRTC   
           li Slow! HTML5 'Started' in 2008, Stable Recommendation Expected 2014!!!
         aside 
-          |So we have a way of formulating the rules. And the advantages to following the rules
-          |are what's described in the manifesto. Interoperability - non Proprietary standards.
-          <br>
-          |But what happens when you do not follow the rules.                
+          |               
 
       section
         h2 Let's Start At The Beginning
@@ -259,7 +256,7 @@ html
       section.giffy(style="background-image: url(images/manifesto.png)")
       
       section
-        h2.bullets Life Is Good On The Dekstop
+        h2.bullets Life Is Good On The Desktop
         ul
           li Developers happy
           li Competition & Innovation 
@@ -297,10 +294,10 @@ html
       section.giffy(style="background-image: url(images/Firefox-OS-with-Fox.jpg)")    
         h2.bullets Firefox OS!
         ul
-          li Applying the Lessons Learned On Desktop To Mobile
-          li Making sure mobile is interoperable and remains a public resource.
-          li Remember the manifesto
-          li Open Web Standards are critical to success.
+          li <b>Applying the Lessons Learned On Desktop To Mobile</b><br><br>
+          li Making sure mobile is interoperable and the internet remains a public resource.
+          li Open Web Standards are critical to success.          
+          li Remember the manifesto!
 
         aside Break out about developing in the open etc. This may be really important
 
