--- a/src/index.jade
+++ b/src/index.jade
@@ -248,7 +248,7 @@ html
           li Writing specific code for 4 browsers sucks
           li Standards Complient Browsers Winning (yay firefox)
           li the late 2000's Wide Adoption of Standards Across All Browsers
-          li IE introduces standards Mode in IE8 2009...
+          li (IE introduces standards Mode in IE8 2009...)
 
         aside
           |quirks mode for backward compatibility
@@ -266,6 +266,9 @@ html
 
       section.giffy(style="background-image: url(images/AFP_Getty-60669433.jpg)")    
         h2 Can I Install Firefox On This Thing?
+
+        aside
+          |Iphone rleased in 2007
 
       section.giffy-fit(style="background-image: url(images/its_classified_barack_obama.gif); background-color:#000000;")    
 
